# django-vite-loader

./: .gitignore  README.md  pyproject.toml
src/django_vite_loader/: apps.py  jinja2.py  loader.py  settings.py
src/django_vite_loader/templatetags/: vite_loader.py
