[tool.poetry]
name = "django-vite-loader"
version = "0.1.0"
description = ""
authors = ["Josh Asplund <joshuata@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_vite_loader"}]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2"
jinja2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
